<resources>
    <string name="app_name">OSIS Election</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="banner_title">OSIS\nElection</string>
    <string name="logo_smk_taruna_bhakti">Logo SMK Taruna Bhakti</string>
    <string name="scan">Scan</string>
    <string name="sign_out">Sign out</string>
    <string name="misi">Misi</string>
    <string name="visi">Visi</string>
    <string name="barcode">Barcode</string>
    <string name="loading">Loading</string>
    <string name="loading_message">Please wait for a moment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="zxing_msg_camera_framework_bug"></string>
</resources>